Add catalog use cases